--- a/Source/BorderOnPause.csproj
+++ b/Source/BorderOnPause.csproj
@@ -58,6 +58,7 @@
       <Content Include="..\About\About.xml">
         <Link>About\About.xml</Link>
       </Content>
+      <Content Include="README.md" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
